# qiling

./: Cargo.toml  DEVELOPMENT_LOG.md  auto_push.sh
pc_assistant_rust_ui/: Cargo.toml
pc_assistant_rust_ui/src/: main.rs
pc_assistant_ui/: index.html  package-lock.json  package.json
pc_assistant_ui/src/: main.js
pc_assistant_ui/src-tauri/: Cargo.toml  tauri.conf.json
src/: main.rs
src/ai/: mod.rs
src/browser/: mod.rs
src/config/: mod.rs
src/core/: communication.rs  memory.rs  mod.rs  service.rs
src/dream/: mod.rs
src/harness/: mod.rs
src/memory/: mod.rs  persistent_memory.rs
src/permission/: mod.rs
src/skill/: mod.rs
src/task/: mod.rs
src/tool/: mod.rs
src/utils/: mod.rs
src/voice/: mod.rs
