[package]
name = "pc_assistant_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
sysinfo = "0.29"
chrono = "0.4"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
rusqlite = "0.29"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
scraper = "0.17"
select = "0.6"
urlencoding = "2.1"

